--- a/src/main/java/magazyn/HomePage.html
+++ b/src/main/java/magazyn/HomePage.html
@@ -1,4 +1,5 @@
 <wicket:extend>
-<h1>Witaj świecie!</h1>
-<button type="button" class="btn btn-sm btn-success">Ala ma kota</button>
+<h1>Lista dostaw</h1>
+
+
 </wicket:extend>
